1.完成用户信息的查询服务：非敏感信息+借阅信息 2.调整界面 接下来的任务： 1.完成借书服务与还书服务的打包 2.进入普通用户界面的设计

--- a/web/css/login_layout.css
+++ b/web/css/login_layout.css
@@ -2,5 +2,19 @@
 body {
     color: #000;
     font-size: 14px;
+    font-family: monospace;
     margin: 20px auto;
 }
+
+table{
+    border: 1px;
+    border-color: silver;
+    mso-cellspacing: 0px;
+    padding: 100px;
+    align-content: center;
+    align-items: center;
+    font-family: monospace;
+    font-size: 17px;
+
+}
+
