--- a/web/css/borrow_back.css
+++ b/web/css/borrow_back.css
@@ -24,6 +24,9 @@
     background-color:#A7C942;
     color:#ffffff;
 }
+#customers{
+    box-shadow: 2px 2px 9px 0px black;
+}
 
 #borrowT {
     position: relative;
