--- a/web/css/borrow_back.css
+++ b/web/css/borrow_back.css
@@ -1,21 +1,21 @@
 @charset "UTF-8";
 
 
-#customers,#borrowT,#backT
+#customers,#borrowT,#backT,#loginTable
 {
     font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
     /*width:100%;*/
     border-collapse:collapse;
 }
 
-#customers td, #customers th, #borrowT th, #backT th
+#customers td, #customers th, #borrowT th, #backT th,#loginTable td
 {
     font-size:1em;
     border:1px solid #98bf21;
     padding:3px 7px 2px 7px;
 }
 
-#customers th
+#customers th,#loginTable th
 {
     font-size:1.1em;
     text-align:left;
@@ -39,6 +39,14 @@
     left:+20px;
     top: +20px;
     box-shadow: 2px 2px 9px 0px black;
+}
+
+#loginTable{
+    /*position: center;*/
+    /*left:+20px;*/
+    /*top: +20px;*/
+    box-shadow: 2px 2px 9px 0px black;
+
 }
 
 
