--- a/web/css/login_layout.css
+++ b/web/css/login_layout.css
@@ -1,20 +1,11 @@
 @charset "UTF-8";
-body {
-    color: #000;
-    font-size: 14px;
-    font-family: monospace;
-    margin: 20px auto;
+
+div{
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    /*width:100%;*/
+    border-collapse:collapse;
+    font-size:30px;
+    margin:auto;
+    text-align:-webkit-center;
+    color:coral
 }
-
-table{
-    border: 1px;
-    border-color: silver;
-    mso-cellspacing: 0px;
-    padding: 100px;
-    align-content: center;
-    align-items: center;
-    font-family: monospace;
-    font-size: 17px;
-
-}
-
